# BC-CY-Bot

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  GUIDE.md  OPERATIONS.md  README.md  REQUIREMENTS.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260511_1713_0b2e72e9d569_initial_schema.py  20260511_1730_1b5ff38740dd_add_audit_messages_table.py  20260511_1748_a12e60b65f50_add_invite_links_expired_notified_at.py  20260511_1908_0dfedbea360e_add_reimbursement_tables.py  20260512_1100_a1b2c3d4e5f6_add_inviter_reimbursement_tier.py  20260513_0900_b2c3d4e5f6a7_decouple_reimburse_add_teacher.py
contrib/: bccy-bot.service
src/bccy_bot/: __main__.py  bot.py  config.py
src/bccy_bot/db/: session.py
src/bccy_bot/keyboards/: admin_callbacks.py  admin_factory.py  awaiting_keyboard.py  callback_data.py  factory.py  inviter_callbacks.py  reimburse_audit_callbacks.py  reimburse_callbacks.py
src/bccy_bot/repositories/: admin_repo.py  application_repo.py  blacklist_repo.py  eligibility_chat_repo.py  group_repo.py  invite_link_repo.py  (+8 more)
tests/: conftest.py
tests/unit/: test_admin_repos.py  test_attack_report_service.py  test_audit_service.py  test_delegated_audit.py  test_eligibility_service.py  test_link_tracking_service.py  test_log_channel_service.py  test_recovery_key_service.py  test_recovery_verify_consume.py  test_reimbursement_audit.py  test_reimbursement_infra.py  test_reimbursement_reports.py  test_reimbursement_wizard.py  test_stats_service.py  test_wizard_service.py
(+62 files in other folders)
