[project]
name = "bccy-bot"
version = "1.0.0b3"
description = "BC-CY-Bot: Telegram bot for one-time invite link审核与签发"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "SQLAlchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "argon2-cffi>=23.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bccy_bot"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
